--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Environment Variables for Weather App
-# Copy this file to .env and fill in your actual values
+# Copy this file to .env and fill in your actual values (FOLLOW THE COMMENTS)
 
 # OpenWeatherMap API Key (required)
 # Get your free API key from: https://openweathermap.org/api
